index test page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!--
 <meta http-equiv="refresh" content="0; URL=http://www.mayurispecialschool.in">
+-->
+
+<html>
+<head> test Page</head>
+<body>
+This is a test page 
+</body>
+</html>
